--- a/page-services.html
+++ b/page-services.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO -->
-    <title>Nestor - Services</title>
+    <title>Products and Services</title>
     <meta name="description" content="HTML5 & CSS3 Multipurpose Theme" />
     <meta name="keywords" content="HTML5, CSS3, Theme, ThemeForest, Flat, Responsive, Multipurpose, Modern" />
     <link type="text/plain" rel="author" href="humans.txt" />
 
-    <link href="favicon.png" rel="icon" type="image/png" />
+    <link href="vsbenefitlogo.png" rel="icon" type="image/png" />
 
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,700%7cBitter:400,700' rel='stylesheet' type='text/css'>
     <!-- Bootstrap 3.1.0 -->
@@ -33,8 +33,8 @@
         <div class="container">
           <div class="row">
 
-            <div id="logo-region" class="logo col-md-3 text-center-sm">
-              <a href="index.html"><img src="logo.png" alt="logo" class="img-responsive" /></a>
+            <div id="logo-region" class="logo col-md-2 text-center-sm">
+              <a href="index.html"><img src="vsbenefitlogo.png" alt="logo" class="img-responsive" /></a>
             </div> <!-- /logo-region -->
 
             <div id="menu-region" class="col-md-9">
