More header changes

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <li><a href="page-services.html">Products and Services</a></li>
                       </ul>
                     </li>
-                    <li><a href="contact.php">Contact</a></li>
+                    <li><a href="contact.php">Contact Us</a></li>
                   </ul>
                 </div> <!-- /navbar-collapse -->
               </nav>
@@ -110,7 +110,7 @@
                     <div class="highlighted-slider-2-content">
                       <h1 class="slider-title">For Every Purpose</h1>
                       <p class="slider-description">Nestor is a multipurpose theme that you can use for your company or studio.</p>
-                      <a href="contact.php" class="btn btn-default slider-button">Contact us</a>
+                      <a href="contact.php" class="btn btn-default slider-button">Contact Us</a>
                     </div> <!-- /highlighted-slider-2-content -->
                   </figcaption>
                 </figure>
