--- a/page-about.html
+++ b/page-about.html
@@ -117,8 +117,9 @@
 
               <div class="col-xs-12 col-md-6">
                 <h5>Our company background</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus imperdiet pulvinar risus, at posuere justo scelerisque sed. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
-                <p>Vestibulum ullamcorper risus purus, at porttitor diam rhoncus id. Suspendisse tortor risus, consequat et urna varius, faucibus molestie lacus. Sed eu ligula porttitor, hendrerit mi vitae.</p>
+                <p>Personalized service and long lasting relationships are the cornerstone of our business. We see ourselves as an
+                  extension of our clients - representing you, <br> not a product.</p>
+                  <p>Partnering with larger general agencies allow us to give access to cutting edge technologies and programs at no additional cost to our clients.</p>
                 <ul class="icon-list">
                   <li><i class="icon ion-checkmark-round text-color-theme"></i>Lorem ipsum dolor sit amet, consectetur</li>
                   <li><i class="icon ion-checkmark-round text-color-theme"></i>Suspendisse tristique velit vel ligula mattis</li>
