--- a/page-services.html
+++ b/page-services.html
@@ -50,59 +50,22 @@
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home</a>
                       <ul class="dropdown-menu">
-                        <li><a href="index.html">Home Standard</a></li>
-                        <li><a href="index-2.html">Home Alternative</a></li>
-                        <li><a href="index-3.html">Home Agency</a></li>
+                        <li><a href="index.html">Home</a></li>
                       </ul>
                     </li>
                     <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">About</a>
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">About Us</a>
                       <ul class="dropdown-menu">
-                        <li><a href="page-about.html">About</a></li>
-                        <li><a href="page-about-me.html">About Me</a></li>
+                        <li><a href="page-about.html">About Us</a></li>
                       </ul>
                     </li>
                     <li class="dropdown active">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages</a>
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products and Services</a>
                       <ul class="dropdown-menu">
-                        <li class="active"><a href="page-services.html">Services</a></li>
-                        <li><a href="page-faq.html">FAQ</a></li>
-                        <li><a href="page-404.html">404 page</a></li>
-                        <li><a href="page-403.html">403 page</a></li>
-                        <li><a href="page-maintenance.html">Maintenance page</a></li>
-                        <li><a href="page-construction.html">Under Construction</a></li>
+                        <li class="active"><a href="page-services.html">Products and Services</a></li>
                       </ul>
                     </li>
-                    <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Features</a>
-                      <ul class="dropdown-menu">
-                        <li><a href="page-elements.html">Elements</a></li>
-                        <li><a href="header-1.html">Header 1</a></li>
-                        <li><a href="header-2.html">Header 2</a></li>
-                        <li><a href="header-3.html">Header 3 Sticky</a></li>
-                        <li><a href="footer-1.html">Footer 1</a></li>
-                        <li><a href="footer-2.html">Footer 2</a></li>
-                        <li><a href="footer-3.html">Footer 3</a></li>
-                      </ul>
-                    </li>
-                    <li class="dropdown">
-                      <a href="blog.html" class="dropdown-toggle" data-toggle="dropdown">Blog</a>
-                      <ul class="dropdown-menu">
-                        <li><a href="blog.html">Blog (no sidebar)</a></li>
-                        <li><a href="blog-single.html">Blog single</a></li>
-                      </ul>
-                    </li>
-                    <li class="dropdown">
-                      <a href="portfolio.html" class="dropdown-toggle" data-toggle="dropdown">Portfolio</a>
-                      <ul class="dropdown-menu">
-                        <li><a href="portfolio.html">Portfolio (3 Columns)</a></li>
-                        <li><a href="portfolio-2.html">Portfolio (2 Columns)</a></li>
-                        <li><a href="portfolio-single.html">Portfolio single</a></li>
-                        <li><a href="gallery.html">Gallery (3 Columns)</a></li>
-                        <li><a href="gallery-2.html">Gallery (2 Columns)</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="contact.php">Contact</a></li>
+                    <li><a href="contact.php">Contact Us</a></li>
                   </ul>
                 </div> <!-- /navbar-collapse -->
               </nav>
@@ -120,7 +83,7 @@
               <div class="region">
 
                 <div id="page-title-block" class="page-title block">
-                  <h1>Services</h1>
+                  <h1> Products and Services</h1>
                 </div> <!-- /page-title-block -->
 
               </div> <!-- /region -->
