--- a/page-services.html
+++ b/page-services.html
@@ -34,7 +34,7 @@
           <div class="row">
 
             <div id="logo-region" class="logo col-md-2 text-center-sm">
-              <a href="index.html"><img src="vsbenefitlogo.png" alt="logo" class="img-responsive" /></a>
+              <a href="index.html"><img src="vsbenefitlogo.png" alt="logo" class="img-responsive" style="margin-top: 10px;" /></a>
             </div> <!-- /logo-region -->
 
             <div id="menu-region" class="col-md-9">
@@ -48,22 +48,13 @@
                 <div class="collapse navbar-collapse navbar-ex1-collapse">
                   <ul class="nav navbar-right navbar-nav">
                     <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home</a>
-                      <ul class="dropdown-menu">
-                        <li><a href="index.html">Home</a></li>
-                      </ul>
+                      <a href="index.html" class="dropdown-toggle">Home</a>
                     </li>
                     <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">About Us</a>
-                      <ul class="dropdown-menu">
-                        <li><a href="page-about.html">About Us</a></li>
-                      </ul>
+                      <a href="page-about.html" class="dropdown-toggle">About Us</a>
                     </li>
                     <li class="dropdown active">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products and Services</a>
-                      <ul class="dropdown-menu">
-                        <li class="active"><a href="page-services.html">Products and Services</a></li>
-                      </ul>
+                      <a href="page-services.html" class="dropdown-toggle">Products and Services</a>
                     </li>
                     <li><a href="contact.php">Contact Us</a></li>
                   </ul>
@@ -78,29 +69,14 @@
       <div id="top-content-region" class="top-content region-0 padding-top-15 padding-bottom-15 block-15 bg-color-grayLight1">
         <div class="container">
           <div class="row">
-
             <div id="top-content-left-region" class="top-content-left col-xs-12 col-md-6 text-center-sm">
               <div class="region">
-
                 <div id="page-title-block" class="page-title block">
-                  <h1> Products and Services</h1>
+                  <h1>Products and Services</h1>
                 </div> <!-- /page-title-block -->
 
               </div> <!-- /region -->
-            </div> <!-- /top-content-left-region -->
 
-            <div id="top-content-right-region" class="top-content-right col-xs-12 col-md-6 text-right text-center-sm">
-              <div class="region">
-
-                <div id="page-breadcrumbs-block" class="page-breadcrumbs block">
-                  <div class="breadcrumbs">
-                    <a href="index.html">Home</a>
-                    <span class="delimiter">›</span>
-                    Services
-                  </div> <!-- /breadcrumbs -->
-                </div> <!-- /page-breadcrumbs-block -->
-
-              </div> <!-- /region -->
             </div> <!-- /top-content-right-region -->
 
           </div> <!-- /row -->
@@ -114,7 +90,7 @@
             <div class="vertical-center text-center">
               <div class="container">
                 <h1>We love what we do</h1>
-                <p>We strive every day to deliver the best quality products and to please our clients. Your statisfaction is our duty, your success is our goal.</p>
+                <p>It's not about the products or plans, it's about the people. Using a collaborative approach, VSBP coordinates an offering that fits you.</p>
               </div> <!-- /container -->
             </div> <!-- /vertical-center -->
           </div> <!-- /overlay -->
@@ -130,164 +106,47 @@
 
               <div class="col-xs-12 col-sm-6 col-md-4 panels-item">
                 <div class="panels-icon text-color-theme">
-                  <i class="icon ion-umbrella"></i>
+                    <i class="icon ion-medkit"></i>
                 </div> <!-- /panels-icon -->
                 <div class="panels-text">
-                  <h6>Data Protection</h6>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec purus quam. Etiam ac ligula ut massa faucibus euismod non rhoncus libero.</p>
+                  <h6>Medical Plans</h6>
+                    <ul class="icon-list">
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Health maintenance organization (HMO) plans.</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Preferred provider organization (PPO) plans.</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Health savings account (HSA) plans.</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Self-insured plans.</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>International and expatiate plans.</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Individual plans (Including covered California Exchange).</li>
+                </ul>
                 </div> <!-- /panels-text -->
               </div> <!-- /panels-item -->
 
-              <div class="col-xs-12 col-sm-6 col-md-4 panels-item margin-top-xs-40">
-                <div class="panels-icon text-color-theme">
-                  <i class="icon ion-at"></i>
-                </div> <!-- /panels-icon -->
-                <div class="panels-text">
-                  <h6>Mailing Lists</h6>
-                  <p>Proin auctor nisl odio, at malesuada metus venenatis id. Etiam leo nunc, tristique porttitor magna ac, interdum pretium tortor. Vestibulum et.</p>
-                </div> <!-- /panels-text -->
-              </div> <!-- /panels-item -->
 
               <div class="clearfix visible-sm"></div>
 
               <div class="col-xs-12 col-sm-6 col-md-4 panels-item margin-top-sm-40">
                 <div class="panels-icon text-color-theme">
-                  <i class="icon ion-speedometer"></i>
+                  <i class="icon ion-steam"></i>
                 </div> <!-- /panels-icon -->
                 <div class="panels-text">
-                  <h6>Website Optimization</h6>
-                  <p>Curabitur turpis nisi, placerat a dapibus ac, lobortis sed ipsum. Praesent commodo orci tincidunt, fringilla sapien et, ultricies massa. Pellentesque habitant.</p>
-                </div> <!-- /panels-text -->
-              </div> <!-- /panels-item -->
-
-              <div class="col-xs-12 col-sm-6 col-md-4 panels-item margin-top-40">
-                <div class="panels-icon text-color-theme">
-                  <i class="icon ion-monitor"></i>
-                </div> <!-- /panels-icon -->
-                <div class="panels-text">
-                  <h6>Responsive Designs</h6>
-                  <p>Pellentesque massa dolor, rhoncus sit amet lorem ut, vestibulum condimentum nisl. Aenean ac libero est. Nulla eget leo rutrum, sagittis.</p>
-                </div> <!-- /panels-text -->
-              </div> <!-- /panels-item -->
-
-              <div class="clearfix visible-sm"></div>
-
-              <div class="col-xs-12 col-sm-6 col-md-4 panels-item margin-top-40">
-                <div class="panels-icon text-color-theme">
-                  <i class="icon ion-videocamera"></i>
-                </div> <!-- /panels-icon -->
-                <div class="panels-text">
-                  <h6>Corporate Videos</h6>
-                  <p>Aenean orci libero, volutpat ac lectus eget, malesuada ullamcorper neque. Nam lacinia mauris risus, eget vestibulum nisi semper at. Sed pharetra.</p>
-                </div> <!-- /panels-text -->
-              </div> <!-- /panels-item -->
-
-              <div class="col-xs-12 col-sm-6 col-md-4 panels-item margin-top-40">
-                <div class="panels-icon text-color-theme">
-                  <i class="icon ion-speakerphone"></i>
-                </div> <!-- /panels-icon -->
-                <div class="panels-text">
-                  <h6>Marketing Solutions</h6>
-                  <p>Nam consectetur porttitor ultricies. Nulla scelerisque, libero at malesuada luctus, odio nulla cursus nisl, sit amet pulvinar mi massa quis elit.</p>
+                  <h6>Core and Voluntary Products</h6>
+                    <ul class="icon-list">
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Dental Plans (PPO & HMO).</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Vision.</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Group Life/AD&D.</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Chiropractor/Acupuncture.</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Short and Long Term Disability.</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Section 125/Cafeteria Plans.</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Travel Insurance.</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Special Risk Coverage.</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Long Term Care.</li>
+                </ul>
                 </div> <!-- /panels-text -->
               </div> <!-- /panels-item -->
 
             </div> <!-- /row -->
           </div> <!-- /container -->
         </div> <!-- /panels-4-block -->
-
-      </div> <!-- /content-region -->
-
-      <div id="content-1-region" class="content-1 region bg-color-grayDark2 text-color-light text-center">
-
-        <div id="skills-1-block" class="skills-1 block">
-          <div class="container">
-            <div class="row">
-
-              <div class="col-xs-4 col-md-2 skills-1-item">
-                <h4 class="skills-1-item-title">83%</h4>
-                <p class="text-color-theme">HTML5</p>
-              </div> <!-- /skills-1-item -->
-
-              <div class="col-xs-4 col-md-2 skills-1-item">
-                <h4 class="skills-1-item-title">78%</h4>
-                <p class="text-color-theme">CSS3</p>
-              </div> <!-- /skills-1-item -->
-
-              <div class="col-xs-4 col-md-2 skills-1-item">
-                <h4 class="skills-1-item-title">86%</h4>
-                <p class="text-color-theme">JavaScript</p>
-              </div> <!-- /skills-1-item -->
-
-              <div class="clearfix visible-xs"></div>
-
-              <div class="col-xs-4 col-md-2 skills-1-item margin-top-sm-40">
-                <h4 class="skills-1-item-title">60%</h4>
-                <p class="text-color-theme">AngularJS</p>
-              </div> <!-- /skills-1-item -->
-
-              <div class="col-xs-4 col-md-2 skills-1-item margin-top-sm-40">
-                <h4 class="skills-1-item-title">80%</h4>
-                <p class="text-color-theme">Photoshop</p>
-              </div> <!-- /skills-1-item -->
-
-              <div class="col-xs-4 col-md-2 skills-1-item margin-top-sm-40">
-                <h4 class="skills-1-item-title">75%</h4>
-                <p class="text-color-theme">Illustrator</p>
-              </div> <!-- /skills-1-item -->
-
-            </div> <!-- /row -->
-          </div> <!-- /container -->
-        </div> <!-- /skills-1-block -->
-
-      </div> <!-- /content-1-region -->
-
-      <div id="content-2-region" class="content-2 region">
-
-        <div id="testimonials-2-block" class="testimonials-2 block text-center">
-          <div class="container">
-            <div class="row">
-
-              <div class="col-xs-12 col-md-4 testimonials-2-item">
-                <i class="icon ion-ios7-chatbubble-outline testimonials-2-icon text-color-theme size-48"></i>
-                <p class="testimonials-2-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent faucibus massa in mauris rhoncus aliquam. Suspendisse nec velit vestibulum, euismod quam id, pellentesque elit. Ut a interdum metus, vel dictum nibh.</p>
-                <p class="testimonials-2-author bitter-font">Chris Niccolls, <i>The Camera Store</i></p>
-              </div> <!-- /testimonials-2-item -->
-
-              <div class="col-xs-12 col-md-4 testimonials-2-item">
-                <i class="icon ion-ios7-chatbubble-outline testimonials-2-icon text-color-theme size-48"></i>
-                <p class="testimonials-2-text">Sed fringilla sem sed massa ullamcorper, vitae rutrum justo sodales. Cras sed iaculis enim. Sed aliquet viverra nisl a tristique. Curabitur vitae mauris sem. Pellentesque iaculis nibh leo, mattis aliquet arcu tincidunt at.</p>
-                <p class="testimonials-2-author bitter-font">Joe McNally, <i>Adorama</i></p>
-              </div> <!-- /testimonials-2-item -->
-
-              <div class="col-xs-12 col-md-4 testimonials-2-item">
-                <i class="icon ion-ios7-chatbubble-outline testimonials-2-icon text-color-theme size-48"></i>
-                <p class="testimonials-2-text">Cras adipiscing odio nunc, non laoreet urna suscipit ac. Pellentesque congue egestas risus viverra pharetra. Morbi pretium orci magna, vitae mattis nisl viverra eleifend. Vestibulum euismod erat non ligula hendrerit tincidunt.</p>
-                <p class="testimonials-2-author bitter-font">Mark Wallace, <i>Snapfactory</i></p>
-              </div> <!-- /testimonials-2-item -->
-
-            </div> <!-- /row -->
-          </div> <!-- container -->
-        </div> <!-- /testimonials-2-block -->
-
-      </div> <!-- /content-2-region -->
-
-      <div id="content-3-region" class="content-3 region bg-color-theme text-color-light">
-
-        <div id="call-to-action-1-block" class="call-to-action-1 block">
-          <div class="container">
-            <div class="row">
-
-              <div class="col-xs-12 text-center">
-                <h4 class="call-to-action-1-text">Follow these clients and hire us</h4>
-                <a href="contact.php" class="call-to-action-1-button btn btn-default">Contact Us</a>
-              </div>
-
-            </div> <!-- /row -->
-          </div> <!-- /container -->
-        </div> <!-- /call-to-action-1-block -->
-
-      </div> <!-- /content-3-region -->
 
       <div id="footer-columns-region" class="footer-columns region-30 block-30 bg-color-grayDark2 text-color-light">
         <div class="container">
@@ -298,7 +157,7 @@
 
                 <div id="footer-address-block" class="footer-address block">
                   <i class="icon ion-ios7-location-outline size-32 margin-bottom-20"></i>
-                  <p>795 Fake Ave, Door 6<br />Wonderland, CA 94107</p>
+                  <p>2050 Main Street Suite #520<br />Irvine, CA 92614</p>
                 </div> <!-- /footer-address-block -->
 
               </div> <!-- /region -->
@@ -309,7 +168,7 @@
 
                 <div id="footer-mail-block" class="footer-mail block">
                   <i class="icon ion-ios7-email-outline size-32 margin-bottom-20"></i>
-                  <p><a href="mailto:test@nestor.pt">info@nestor.pt</a><br /><a href="mailto:test@nestor.pt">support@nestor.pt</a></p>
+                  <p><a href="mailto:info@vsbenefitspact.com">info@vsbenefitspact.com</a><br />
                 </div> <!-- /footer-mail-block -->
 
               </div> <!-- /region -->
@@ -320,7 +179,7 @@
 
                 <div id="footer-phone-block" class="footer-phone block">
                   <i class="icon ion-ios7-telephone-outline size-32 margin-bottom-20"></i>
-                  <p>+351123456789<br />+351987654321</p>
+                  <p>+1 (351) 123-4567</p>
                 </div> <!-- /footer-phone-block -->
 
               </div> <!-- /region -->
@@ -328,83 +187,12 @@
 
           </div> <!-- /row -->
         </div> <!-- /container -->
-      </div> <!-- /footer-columns-region -->
 
-      <footer class="region-10 block-10 bg-color-grayDark1 text-color-light">
-        <div class="container">
-          <div class="row">
-
-            <div id="footer-left-region" class="footer-left region-bottom-sm-0 col-xs-12 col-md-6 text-center-sm">
-              <div class="region">
-
-                <div id="copyright-block" class="block">
-                  <p>Nestor was developed by <a href="http://leaftree.pt">leaftree</a></p>
-                </div> <!-- /copyright-block -->
-
-              </div> <!-- /region -->
-            </div> <!-- /footer-left-region -->
-
-            <div id="footer-right-region" class="footer-right region-top-sm-0 col-xs-12 col-md-6 text-right text-center-sm">
-              <div class="region">
-
-                <div id="social-networks-footer-block" class="social-networks-footer block">
-                  <a href="http://facebook.com"><i class="icon ion-social-facebook"></i></a>
-                  <a href="http://twitter.com"><i class="icon ion-social-twitter"></i></a>
-                  <a href="http://linkedin.com"><i class="icon ion-social-linkedin"></i></a>
-                  <a href="http://pinterest.com"><i class="icon ion-social-pinterest"></i></a>
-                  <a href="http://vimeo.com"><i class="icon ion-social-vimeo"></i></a>
-                  <a href="http://dribbble.com"><i class="icon ion-social-dribbble-outline"></i></a>
-                  <a href="http://github.com"><i class="icon ion-social-github"></i></a>
-                </div> <!-- /social-networks-footer -->
-
-              </div> <!-- /region -->
-            </div> <!-- /footer-right-region -->
 
           </div> <!-- /row -->
         </div> <!-- /container -->
       </footer>
     </div> <!-- /main-wrapper -->
-
-    <!-- Demo switcher -->
-
-    <div class="switcher">
-      <a href="#" class="link"><i class="icon ion-levels size-32"></i></a>
-      <p class="title">Settings</p>
-
-      <div class="themeOptions">
-        <p>Theme Colors</p>
-        <ul class="themeColors optionList">
-          <li><a href="#" class="aqua"></a></li>
-          <li><a href="#" class="blue"></a></li>
-          <li><a href="#" class="brown"></a></li>
-          <li><a href="#" class="emerald"></a></li>
-          <li><a href="#" class="green"></a></li>
-          <li><a href="#" class="orange"></a></li>
-          <li><a href="#" class="red"></a></li>
-          <li><a href="#" class="violet"></a></li>
-          <li><a href="#" class="yellow"></a></li>
-        </ul>
-
-        <p>Layout</p>
-        <select class="themeLayout">
-          <option value="wide">wide</option>
-          <option value="boxed">boxed</option>
-        </select>
-
-        <p>BG Patterns</p>
-        <ul class="themePatterns optionList">
-          <li><a href="#" class="bg-pattern-cross_scratches"></a></li>
-          <li><a href="#" class="bg-pattern-concrete_wall_3"></a></li>
-          <li><a href="#" class="bg-pattern-cream_pixels"></a></li>
-          <li><a href="#" class="bg-pattern-debut_dark"></a></li>
-          <li><a href="#" class="bg-pattern-grey_wash_wall"></a></li>
-          <li><a href="#" class="bg-pattern-retina_wood"></a></li>
-        </ul>
-      </div> <!-- /themeOptions -->
-
-    </div> <!-- /switcher -->
-
-    <!-- End of demo switcher -->
 
     <!-- Back to top button -->
 
