--- a/page-about.html
+++ b/page-about.html
@@ -34,7 +34,7 @@
           <div class="row">
 
             <div id="logo-region" class="logo col-md-2 text-center-sm">
-              <a href="index.html"><img src="vsbenefitlogo.png" alt="logo" class="img-responsive" /></a>
+              <a href="index.html"><img src="vsbenefitlogo.png" alt="logo" class="img-responsive" style="margin-top: 10px;" /></a>
             </div> <!-- /logo-region -->
 
             <div id="menu-region" class="col-md-9">
@@ -48,22 +48,13 @@
                 <div class="collapse navbar-collapse navbar-ex1-collapse">
                   <ul class="nav navbar-right navbar-nav">
                     <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home</a>
-                      <ul class="dropdown-menu">
-                        <li><a href="index.html">Home</a></li>
-                      </ul>
+                      <a href="index.html" class="dropdown-toggle">Home</a>
                     </li>
                     <li class="dropdown active">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">About Us</a>
-                      <ul class="dropdown-menu">
-                        <li class="active"><a href="page-about.html">About Us</a></li>
-                      </ul>
+                      <a href="page-about.html" class="dropdown-toggle">About Us</a>
                     </li>
                     <li class="dropdown">
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products and Services</a>
-                      <ul class="dropdown-menu">
-                        <li><a href="page-services.html">Products and Services</a></li>
-                      </ul>
+                      <a href="page-services.html" class="dropdown-toggle">Products and Services</a>
                     </li>
                     <li><a href="contact.php">Contact Us</a></li>
                   </ul>
@@ -88,23 +79,6 @@
 
               </div> <!-- /region -->
             </div> <!-- /top-content-left-region -->
-
-            <div id="top-content-right-region" class="top-content-right col-xs-12 col-md-6 text-right text-center-sm">
-              <div class="region">
-
-                <div id="page-breadcrumbs-block" class="page-breadcrumbs block">
-                  <div class="breadcrumbs">
-                    <a href="index.html">Home</a>
-                    <span class="delimiter">›</span>
-                    <a href="page-about.html">About</a>
-                    <span class="delimiter">›</span>
-                    About
-                  </div> <!-- /breadcrumbs -->
-                </div> <!-- /page-breadcrumbs-block -->
-
-              </div> <!-- /region -->
-            </div> <!-- /top-content-right-region -->
-
           </div> <!-- /row -->
         </div> <!-- /container -->
       </div> <!-- /top-content-region -->
@@ -114,184 +88,20 @@
         <div id="about-content-block" class="about-content block">
           <div class="container">
             <div class="row">
-
               <div class="col-xs-12 col-md-6">
-                <h5>Our company background</h5>
+                <h5>Our Company Background</h5>
                 <p>Personalized service and long lasting relationships are the cornerstone of our business. We see ourselves as an
                   extension of our clients - representing you, <br> not a product.</p>
                   <p>Partnering with larger general agencies allow us to give access to cutting edge technologies and programs at no additional cost to our clients.</p>
-                <ul class="icon-list">
-                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Lorem ipsum dolor sit amet, consectetur</li>
-                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Suspendisse tristique velit vel ligula mattis</li>
-                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Curabitur tincidunt iaculis est posuere</li>
-                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Vestibulum vitae nibh elit phasellus sed</li>
-                </ul>
               </div> <!-- /col-xs-12 -->
 
               <div class="col-xs-12 col-md-6 margin-top-sm-30">
-                <div class="flex-arrow-slider">
-                  <ul class="slides">
-                    <li><img src="img/content/cookies.jpg" alt="cookies" title="cookies" class="img-responsive img-full-width" /></li>
-                    <li><img src="img/content/tea.jpg" alt="tea" title="tea" class="img-responsive img-full-width" /></li>
-                    <li><img src="img/content/table.jpg" alt="table" title="table" class="img-responsive img-full-width" /></li>
-                  </ul>
-                </div> <!-- /flex-arrow-slider -->
+                <img src="img/highlighted/everyonetable.jpg" class="img-responsive img-full-width" />
               </div> <!-- /col-xs-12 -->
 
             </div> <!-- /row -->
           </div> <!-- /container -->
         </div> <!-- /about-content-block -->
-
-        <div id="panels-3-block" class="panels-3 block">
-          <div class="container">
-            <div class="row">
-
-              <div class="col-xs-12 col-md-4 panels-item">
-                <h5 class="panels-item-title">Fast Support</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nunc justo, ultrices quis consequat nec, sodales non tortor. Pellentesque porttitor.</p>
-              </div> <!-- /panels-item -->
-
-              <div class="col-xs-12 col-md-4 panels-item margin-top-sm-30">
-                <h5 class="panels-item-title">Secure Bitcoins</h5>
-                <p>Integer sed feugiat nisi. Nulla pharetra in lacus in egestas. Mauris consectetur, elit congue placerat volutpat, ipsum velit blandit justo, sed imperdiet.</p>
-              </div> <!-- /panels-item -->
-
-              <div class="col-xs-12 col-md-4 panels-item margin-top-sm-30">
-                <h5 class="panels-item-title">Happy Life</h5>
-                <p>Sed sollicitudin libero nisl, in vehicula lorem blandit sit amet. Duis vel sapien sed lacus posuere varius ut vel dolor. Donec ut odio sagittis mi fringilla.</p>
-              </div> <!-- /panels-item -->
-
-            </div> <!-- /row -->
-          </div> <!-- /container -->
-        </div> <!-- /panels-3-block -->
-
-      </div> <!-- /content-region -->
-
-      <div id="content-1-region" class="content-1 bg-color-grayLight1 region">
-
-        <div id="company-stats-2-block" class="company-stats-2 block text-center">
-          <div class="container">
-
-            <div class="row">
-              <div class="col-xs-12 col-md-10 col-md-offset-1 text-center">
-                <h3 class="text-color-theme">Nestor is a sleek theme that will fit your purposes</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo dui dui, quis scelerisque massa placerat eu. Donec nunc nibh, malesuada non enim non, fermentum lobortis magna. Quisque vitae mollis quam, a feugiat odio. Proin id lorem mollis, mollis.</p>
-              </div> <!-- /col-xs-12 -->
-            </div> <!-- /row -->
-
-            <div class="row">
-              <div class="col-xs-12 col-md-4 company-stat-main">
-                <i class="icon ion-arrow-graph-up-right size-48 text-color-theme"></i>
-                <h2 class="company-stat-main-title">40%</h2>
-                <h6 class="company-stat-main-description">Exportation</h6>
-              </div> <!-- /company-stat-main -->
-
-              <div class="col-xs-12 col-md-8 company-stat-extra">
-                <div class="row">
-                  <div class="col-xs-4">
-                    <h3 class="company-stat-extra-title">120</h3>
-                    <p>Employees</p>
-                  </div> <!-- /col-xs-4 -->
-                  <div class="col-xs-4">
-                    <h3 class="company-stat-extra-title">12</h3>
-                    <p>Stores</p>
-                  </div> <!-- /col-xs-4 -->
-                  <div class="col-xs-4">
-                    <h3 class="company-stat-extra-title">83</h3>
-                    <p>Patents</p>
-                  </div> <!-- /col-xs-4 -->
-                </div> <!-- /row -->
-
-                <div class="row">
-                  <div class="col-xs-4">
-                    <h3 class="company-stat-extra-title">19</h3>
-                    <p>Years</p>
-                  </div> <!-- /col-xs-4 -->
-                  <div class="col-xs-4">
-                    <h3 class="company-stat-extra-title">200+</h3>
-                    <p>Clients</p>
-                  </div> <!-- /col-xs-4 -->
-                  <div class="col-xs-4">
-                    <h3 class="company-stat-extra-title">16</h3>
-                    <p>Awards</p>
-                  </div> <!-- /col-xs-4 -->
-                </div> <!-- /row -->
-              </div> <!-- /company-stat-extra -->
-            </div> <!-- /row -->
-
-          </div> <!-- /container -->
-        </div> <!-- /company-stats-2-block -->
-
-      </div> <!-- /content-1-region -->
-
-      <div id="content-2-region" class="content-2 region">
-
-        <div id="team-block" class="team block">
-          <div class="container">
-
-            <h2 class="block-title">Our Team</h2>
-
-            <div class="row">
-
-              <div class="col-xs-12 col-md-4 team-item">
-                <div class="team-item-image">
-                  <img src="img/team/team1.jpg" alt="member 1" title="member 1" class="img-responsive" />
-                  <div class="team-item-overlay">
-                    <p>
-                      <a href="http://facebook.com">facebook</a><br/>
-                      <a href="http://twitter.com">twitter</a><br/>
-                      <a href="http://pinterest.com">pinterest</a>
-                    </p>
-                  </div>
-                </div> <!-- /team-item-image -->
-                <div class="team-item-name">
-                  <h6>John Doe</h6>
-                  <p class="text-color-theme">CEO</p>
-                </div> <!-- /team-item-name -->
-                <p class="team-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a augue bibendum, convallis tortor sed, porta risus. Phasellus condimentum suscipit nibh.</p>
-              </div> <!-- /team-item -->
-
-              <div class="col-xs-12 col-md-4 team-item">
-                <div class="team-item-image">
-                  <img src="img/team/team2.jpg" alt="member 2" title="member 2" class="img-responsive" />
-                  <div class="team-item-overlay">
-                    <p>
-                      <a href="http://facebook.com">facebook</a><br/>
-                      <a href="http://twitter.com">twitter</a><br/>
-                      <a href="http://pinterest.com">pinterest</a>
-                    </p>
-                  </div>
-                </div> <!-- /team-item-image -->
-                <div class="team-item-name">
-                  <h6>Jane Smith</h6>
-                  <p class="text-color-theme">CFO</p>
-                </div> <!-- /team-item-name -->
-                <p class="team-item-description">Duis fringilla scelerisque erat et venenatis. Duis eu ligula non mauris blandit ultricies ac sed dui. Nullam odio nunc, porta vel sollicitudin a, convallis non.</p>
-              </div> <!-- /team-item -->
-
-              <div class="col-xs-12 col-md-4 team-item">
-                <div class="team-item-image">
-                  <img src="img/team/team3.jpg" alt="member 3" title="member 3" class="img-responsive" />
-                  <div class="team-item-overlay">
-                    <p>
-                      <a href="http://facebook.com">facebook</a><br/>
-                      <a href="http://twitter.com">twitter</a><br/>
-                      <a href="http://pinterest.com">pinterest</a>
-                    </p>
-                  </div>
-                </div> <!-- /team-item-image -->
-                <div class="team-item-name">
-                  <h6>Gloria Doe</h6>
-                  <p class="text-color-theme">Designer</p>
-                </div> <!-- /team-item-name -->
-                <p class="team-item-description">Sed consequat tristique purus et tincidunt. Donec volutpat risus lorem, auctor condimentum tellus sagittis non. Etiam viverra mi arcu. Fusce blandit.</p>
-              </div> <!-- /team-item -->
-
-            </div> <!-- /row -->
-          </div> <!-- /container -->
-        </div> <!-- /team-block -->
-
-      </div> <!-- /content-2-region -->
 
       <div id="content-3-region" class="content-3 region bg-color-grayLight1">
 
@@ -299,10 +109,6 @@
           <div class="container">
 
             <div class="row text-center">
-
-              <div class="col-xs-12 col-sm-6 col-md-3 partner">
-                <img src="img/partners/forged.png" alt="partner 1" class="img-responsive" />
-              </div> <!-- /partner -->
 
               <div class="col-xs-12 col-sm-6 col-md-3 margin-top-xs-50 partner">
                 <img src="img/partners/hamburger.png" alt="partner 2" class="img-responsive" />
@@ -312,10 +118,6 @@
 
               <div class="col-xs-12 col-sm-6 col-md-3 margin-top-sm-50 partner">
                 <img src="img/partners/mcqueen.png" alt="partner 3" class="img-responsive" />
-              </div> <!-- /partner -->
-
-              <div class="col-xs-12 col-sm-6 col-md-3 margin-top-sm-50 partner">
-                <img src="img/partners/pacific-coast.png" alt="partner 4" class="img-responsive" />
               </div> <!-- /partner -->
 
             </div> <!-- /row -->
@@ -333,7 +135,7 @@
 
                 <div id="footer-address-block" class="footer-address block">
                   <i class="icon ion-ios7-location-outline size-32 margin-bottom-20"></i>
-                  <p>795 Fake Ave, Door 6<br />Wonderland, CA 94107</p>
+                  <p>2050 Main Street Suite #520<br />Irvine, CA 92614</p>
                 </div> <!-- /footer-address-block -->
 
               </div> <!-- /region -->
@@ -344,7 +146,7 @@
 
                 <div id="footer-mail-block" class="footer-mail block">
                   <i class="icon ion-ios7-email-outline size-32 margin-bottom-20"></i>
-                  <p><a href="mailto:test@nestor.pt">info@nestor.pt</a><br /><a href="mailto:test@nestor.pt">support@nestor.pt</a></p>
+                  <p><a href="mailto:test@vsbenefitspact.com">info@vsbenefitspact.com</a></p>
                 </div> <!-- /footer-mail-block -->
 
               </div> <!-- /region -->
@@ -355,7 +157,7 @@
 
                 <div id="footer-phone-block" class="footer-phone block">
                   <i class="icon ion-ios7-telephone-outline size-32 margin-bottom-20"></i>
-                  <p>+351123456789<br />+351987654321</p>
+                  <p>+1 (351) 123-4567</p>
                 </div> <!-- /footer-phone-block -->
 
               </div> <!-- /region -->
@@ -365,81 +167,10 @@
         </div> <!-- /container -->
       </div> <!-- /footer-columns-region -->
 
-      <footer class="region-10 block-10 bg-color-grayDark1 text-color-light">
-        <div class="container">
-          <div class="row">
-
-            <div id="footer-left-region" class="footer-left region-bottom-sm-0 col-xs-12 col-md-6 text-center-sm">
-              <div class="region">
-
-                <div id="copyright-block" class="block">
-                  <p>Nestor was developed by <a href="http://leaftree.pt">leaftree</a></p>
-                </div> <!-- /copyright-block -->
-
-              </div> <!-- /region -->
-            </div> <!-- /footer-left-region -->
-
-            <div id="footer-right-region" class="footer-right region-top-sm-0 col-xs-12 col-md-6 text-right text-center-sm">
-              <div class="region">
-
-                <div id="social-networks-footer-block" class="social-networks-footer block">
-                  <a href="http://facebook.com"><i class="icon ion-social-facebook"></i></a>
-                  <a href="http://twitter.com"><i class="icon ion-social-twitter"></i></a>
-                  <a href="http://linkedin.com"><i class="icon ion-social-linkedin"></i></a>
-                  <a href="http://pinterest.com"><i class="icon ion-social-pinterest"></i></a>
-                  <a href="http://vimeo.com"><i class="icon ion-social-vimeo"></i></a>
-                  <a href="http://dribbble.com"><i class="icon ion-social-dribbble-outline"></i></a>
-                  <a href="http://github.com"><i class="icon ion-social-github"></i></a>
-                </div> <!-- /social-networks-footer -->
-
-              </div> <!-- /region -->
-            </div> <!-- /footer-right-region -->
-
           </div> <!-- /row -->
         </div> <!-- /container -->
       </footer>
     </div> <!-- /main-wrapper -->
-
-    <!-- Demo switcher -->
-
-    <div class="switcher">
-      <a href="#" class="link"><i class="icon ion-levels size-32"></i></a>
-      <p class="title">Settings</p>
-
-      <div class="themeOptions">
-        <p>Theme Colors</p>
-        <ul class="themeColors optionList">
-          <li><a href="#" class="aqua"></a></li>
-          <li><a href="#" class="blue"></a></li>
-          <li><a href="#" class="brown"></a></li>
-          <li><a href="#" class="emerald"></a></li>
-          <li><a href="#" class="green"></a></li>
-          <li><a href="#" class="orange"></a></li>
-          <li><a href="#" class="red"></a></li>
-          <li><a href="#" class="violet"></a></li>
-          <li><a href="#" class="yellow"></a></li>
-        </ul>
-
-        <p>Layout</p>
-        <select class="themeLayout">
-          <option value="wide">wide</option>
-          <option value="boxed">boxed</option>
-        </select>
-
-        <p>BG Patterns</p>
-        <ul class="themePatterns optionList">
-          <li><a href="#" class="bg-pattern-cross_scratches"></a></li>
-          <li><a href="#" class="bg-pattern-concrete_wall_3"></a></li>
-          <li><a href="#" class="bg-pattern-cream_pixels"></a></li>
-          <li><a href="#" class="bg-pattern-debut_dark"></a></li>
-          <li><a href="#" class="bg-pattern-grey_wash_wall"></a></li>
-          <li><a href="#" class="bg-pattern-retina_wood"></a></li>
-        </ul>
-      </div> <!-- /themeOptions -->
-
-    </div> <!-- /switcher -->
-
-    <!-- End of demo switcher -->
 
     <!-- Back to top button -->
 
