Added Partner logos

--- a/page-services.html
+++ b/page-services.html
@@ -83,18 +83,18 @@
         </div> <!-- /container -->
       </div> <!-- /top-content-region -->
 
-      <div id="highlighted-region" class="highlighted text-color-light">
+              <div id="highlighted-region" class="highlighted text-color-light">
 
-        <div id="text-widget-1-block" class="text-widget-1 position-relative bg-image-rails" data-stellar-background-ratio="0.7">
+        <div id="highlighted-image-1-block" class="highlighted-image-1 position-relative bg-image-rails" data-stellar-background-ratio="0.7">
           <div class="overlay text-color-light">
-            <div class="vertical-center text-center">
+            <div class="vertical-center">
               <div class="container">
-                <h1>We love what we do</h1>
-                <p>It's not about the products or plans, it's about the people. Using a collaborative approach, VSBP coordinates an offering that fits you.</p>
+                <h1>Open Enrollment</h1>
+                <p>"It's not about the products or plans, it's about the people. Using a collaborative approach, VSBP coordinates an offering that fits you."</p>
               </div> <!-- /container -->
             </div> <!-- /vertical-center -->
           </div> <!-- /overlay -->
-        </div> <!-- /text-widget-1-block -->
+        </div> <!-- /highlighted-image-1-block -->
 
       </div> <!-- /highlighted-region -->
 
