--- a/page-about.html
+++ b/page-about.html
@@ -111,13 +111,13 @@
             <div class="row text-center">
 
               <div class="col-xs-12 col-sm-6 col-md-3 margin-top-xs-50 partner">
-                <img src="img/partners/hamburger.png" alt="partner 2" class="img-responsive" />
+                <img src="img/partners/WordAndBrown.png" alt="partner 2" class="img-responsive" />
               </div> <!-- /partner -->
 
               <div class="clearfix visible-sm"></div> <!-- /clearfix -->
 
               <div class="col-xs-12 col-sm-6 col-md-3 margin-top-sm-50 partner">
-                <img src="img/partners/mcqueen.png" alt="partner 3" class="img-responsive" />
+                <img src="img/partners/WarnerPacific.png" alt="partner 3" class="img-responsive" />
               </div> <!-- /partner -->
 
             </div> <!-- /row -->
