--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 
         <div id="panels-4-block" class="panels-4 block">
           <div class="container">
-            <div class="row">
-              <div class="col-xs-12 col-md-4 panels-item">
+            <div class="row" style="margin-left:82.5px; margin-right:82.5px;">
+              <div class="col-xs-12 col-md-6 panels-item margin">
                 <div class="panels-icon text-color-theme">
                   <i class="icon ion-ios7-bell"></i>
                 </div> <!-- /panels-icon -->
@@ -97,7 +97,7 @@
                 </div> <!-- /panels-text -->
               </div> <!-- /panels-item -->
 
-              <div class="col-xs-12 col-md-4 panels-item margin-top-sm-40">
+              <div class="col-xs-12 col-md-6 panels-item margin-top-sm-40">
                 <div class="panels-icon text-color-theme">
                   <i class="icon ion-star"></i>
                 </div> <!-- /panels-icon -->
