--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="row">
 
             <div id="logo-region" class="logo col-md-2 text-center-sm">
-              <a href="index.html"><img src="vsbenefitlogo.png" alt="logo" class="img-responsive" style="margin-top: 10px;"/></a>
+              <a href="index.html"><img src="vsbenefitlogo.png" alt="logo" class="img-responsive" style="margin-top: 10px; margin-bottom: 10px;"/></a>
             </div> <!-- /logo-region -->
 
             <div id="menu-region" class="col-md-9">
@@ -66,27 +66,47 @@
         </div> <!-- container -->
       </header>
 
-      <div id="highlighted-region" class="highlighted text-color-light">
+     <div id="highlighted-region" class="highlighted text-color-light">
         <div id="highlighted-slider-2-block" class="highlighted-slider-2">                <figure>
                   <img src="img/highlighted/highfivecropped.jpg" class="img-responsive img-full-width" alt="Milan" title="Milan">
                   <figcaption class="overlay overlay-30 text-center">
                     <div class="highlighted-slider-2-content">
                       <h1 class="slider-title">VS Benefits Pact</h1>
                       <p class="slider-description">Our promise to you.</p>
-                      <a href="page-about.html" class="btn btn-default">About Us</a>
-                        <a href="page-services.html" class="btn btn-default">Products and Services</a>
-                        <a href="contact.php" class="btn btn-default">Contact Us</a>
                     </div> <!-- /highlighted-slider-2-content -->
                   </figcaption>
                 </figure>
         </div> <!-- /highlighted-slider-2-block -->
-      </div> <!-- /highlighted-region -->
+        </div> <!-- /highlighted-region -->
 
       <div id="content-region" class="content region">
 
         <div id="panels-4-block" class="panels-4 block">
           <div class="container">
-            <div class="row" style="margin-left:82.5px; margin-right:82.5px;">
+            <div class="row hidden-xs" style="margin-left:82.5px; margin-right:82.5px;">
+              <div class="col-xs-12 col-md-6 panels-item margin">
+                <div class="panels-icon text-color-theme">
+                  <i class="icon ion-ios7-bell"></i>
+                </div> <!-- /panels-icon -->
+                <div class="panels-text">
+                  <h6>At Your Service</h6>
+                  <p>Providing concierge service for all your employee benefit needs.</p>
+                </div> <!-- /panels-text -->
+              </div> <!-- /panels-item -->
+
+              <div class="col-xs-12 col-md-6 panels-item margin-top-sm-40">
+                <div class="panels-icon text-color-theme">
+                  <i class="icon ion-star"></i>
+                </div> <!-- /panels-icon -->
+                <div class="panels-text">
+                  <h6>Top Quality</h6>
+                  <p>To us, you are more than a client, you are family.</p>
+                </div> <!-- /panels-text -->
+              </div> <!-- /panels-item -->
+
+            </div> <!-- /row -->
+
+              <div class="row hidden-lg hidden-md hidden-sm">
               <div class="col-xs-12 col-md-6 panels-item margin">
                 <div class="panels-icon text-color-theme">
                   <i class="icon ion-ios7-bell"></i>
