--- a/page-about.html
+++ b/page-about.html
@@ -34,7 +34,7 @@
           <div class="row">
 
             <div id="logo-region" class="logo col-md-2 text-center-sm">
-              <a href="index.html"><img src="vsbenefitlogo.png" alt="logo" class="img-responsive" style="margin-top: 10px;" /></a>
+              <a href="index.html"><img src="vsbenefitlogo.png" alt="logo" class="img-responsive" style="margin-top: 10px; margin-bottom: 10px;" /></a>
             </div> <!-- /logo-region -->
 
             <div id="menu-region" class="col-md-9">
@@ -66,7 +66,7 @@
         </div> <!-- container -->
       </header>
 
-      <div id="top-content-region" class="top-content region-0 padding-top-15 padding-bottom-15 block-15 bg-color-grayLight1">
+      <div id="top-content-region" class="top-content region-0 padding-top-10 padding-bottom-10 block-5 bg-color-grayLight1">
         <div class="container">
           <div class="row">
 
@@ -110,14 +110,25 @@
 
             <div class="row text-center">
 
-              <div class="col-xs-12 col-sm-6 col-md-6 margin-top-xs-50 partner">
-                <img src="img/partners/WordAndBrown.png" alt="partner 2" class="img-responsive" />
+              <div class="col-xs-12 col-sm-6 col-md-4 partner">
+                <img src="img/partners/WordAndBrown.png" alt="partner 1" class="img-responsive" />
+              </div> <!-- /partner -->
+
+              <div class="col-xs-12 col-sm-6 col-md-4 margin-top-xs-50 partner">
+                <img src="img/partners/WarnerPacific.png" alt="partner 2" class="img-responsive" />
               </div> <!-- /partner -->
 
               <div class="clearfix visible-sm"></div> <!-- /clearfix -->
 
-              <div class="col-xs-12 col-sm-6 col-md-6 margin-top-sm-50 partner">
-                <img src="img/partners/WarnerPacific.png" alt="partner 3" class="img-responsive" />
+              <div class="col-xs-12 col-sm-6 col-md-4 margin-top-sm-50 partner">
+                <img src="img/partners/CalChoice.png" alt="partner 3" class="img-responsive" />
+              </div> <!-- /partner -->
+
+            </div> <!-- /row -->
+          </div> <!-- /container -->
+        </div> <!-- /partners-block -->
+
+
               </div> <!-- /partner -->
 
             </div> <!-- /row -->
@@ -169,8 +180,7 @@
 
           </div> <!-- /row -->
         </div> <!-- /container -->
-      </footer>
-    </div> <!-- /main-wrapper -->
+        <!-- /main-wrapper -->
 
     <!-- Back to top button -->
 
