--- a/page-services.html
+++ b/page-services.html
@@ -32,9 +32,8 @@
       <header>
         <div class="container">
           <div class="row">
-
             <div id="logo-region" class="logo col-md-2 text-center-sm">
-              <a href="index.html"><img src="vsbenefitlogo.png" alt="logo" class="img-responsive" style="margin-top: 10px;" /></a>
+              <a href="index.html"><img src="vsbenefitlogo.png" alt="logo" class="img-responsive" style="margin-top: 10px; margin-bottom: 10px;" /></a>
             </div> <!-- /logo-region -->
 
             <div id="menu-region" class="col-md-9">
@@ -66,80 +65,84 @@
         </div> <!-- container -->
       </header>
 
-      <div id="top-content-region" class="top-content region-0 padding-top-15 padding-bottom-15 block-15 bg-color-grayLight1">
+      <div id="top-content-region" class="top-content region-0 padding-top-10 padding-bottom-10 block-5 bg-color-grayLight1">
         <div class="container">
           <div class="row">
             <div id="top-content-left-region" class="top-content-left col-xs-12 col-md-6 text-center-sm">
               <div class="region">
                 <div id="page-title-block" class="page-title block">
                   <h1>Products and Services</h1>
+
                 </div> <!-- /page-title-block -->
-
               </div> <!-- /region -->
-
             </div> <!-- /top-content-right-region -->
-
           </div> <!-- /row -->
         </div> <!-- /container -->
       </div> <!-- /top-content-region -->
 
-              <div id="highlighted-region" class="highlighted text-color-light">
+        <div id="content-region" class="content region">
 
-        <div id="highlighted-image-1-block" class="highlighted-image-1 position-relative bg-image-rails" data-stellar-background-ratio="0.7">
-          <div class="overlay text-color-light">
-            <div class="vertical-center">
-              <div class="container">
-                <h1>Open Enrollment</h1>
-                <p>"It's not about the products or plans, it's about the people. Using a collaborative approach, VSBP coordinates an offering that fits you."</p>
-              </div> <!-- /container -->
-            </div> <!-- /vertical-center -->
-          </div> <!-- /overlay -->
-        </div> <!-- /highlighted-image-1-block -->
-
-      </div> <!-- /highlighted-region -->
-
-      <div id="content-region" class="content region">
-
-        <div id="panels-4-block" class="panels-4 block">
+        <div id="about-content-block" class="about-content block">
           <div class="container">
             <div class="row">
+              <div class="col-xs-12 col-md-offset-2 col-md-8">
+                <img src="img/highlighted/openenrollment.jpg" class="img-responsive img-full-width" />
+              </div> <!-- /col-xs-12 -->
+            </div> <!-- /row -->
+          </div> <!-- /container -->
+        </div> <!-- /about-content-block -->
 
-              <div class="col-xs-12 col-sm-6 col-md-4 panels-item">
+        <div id="content-region" class="content region">
+
+        <div id="about-content-block" class="about-content block">
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-12 col-md-offset-2 col-md-8">
+                <h5>"It's not about the products or plans, it's about the people. Using a collaborative approach, VSBP coordinates an offering that fits you."</h5>
+              </div> <!-- /col-xs-12 -->
+            </div> <!-- /row -->
+          </div> <!-- /container -->
+        </div> <!-- /about-content-block -->
+
+      <div id="content-region" class="content region">
+        <div id="panels-4-block" class="panels-4 block">
+          <div class="container">
+            <div class="row hidden-xs" style="margin-left:82.5px; margin-right:82.5px;">
+              <div class="col-xs-12 col-sm-6 col-md-6 panels-item">
                 <div class="panels-icon text-color-theme">
                     <i class="icon ion-medkit"></i>
                 </div> <!-- /panels-icon -->
                 <div class="panels-text">
                   <h6>Medical Plans</h6>
                     <ul class="icon-list">
-                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Health maintenance organization (HMO) plans.</li>
-                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Preferred provider organization (PPO) plans.</li>
-                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Health savings account (HSA) plans.</li>
-                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Self-insured plans.</li>
-                  <li><i class="icon ion-checkmark-round text-color-theme"></i>International and expatiate plans.</li>
-                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Individual plans (Including covered California Exchange).</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Health maintenance organization (HMO) plans</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Preferred provider organization (PPO) plans</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Health savings account (HSA) plans</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Self-insured plans</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>International and expatiate plans</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Individual plans (Including covered California Exchange)</li>
                 </ul>
                 </div> <!-- /panels-text -->
               </div> <!-- /panels-item -->
 
-
               <div class="clearfix visible-sm"></div>
-
-              <div class="col-xs-12 col-sm-6 col-md-4 panels-item margin-top-sm-40">
+                <div class="row hidden-xs" style="margin-left:82.5px; margin-right:82.5px;">
+              <div class="col-xs-12 col-sm-6 col-md-6 panels-item margin-top-sm-40">
                 <div class="panels-icon text-color-theme">
                   <i class="icon ion-steam"></i>
                 </div> <!-- /panels-icon -->
                 <div class="panels-text">
                   <h6>Core and Voluntary Products</h6>
                     <ul class="icon-list">
-                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Dental Plans (PPO & HMO).</li>
-                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Vision.</li>
-                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Group Life/AD&D.</li>
-                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Chiropractor/Acupuncture.</li>
-                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Short and Long Term Disability.</li>
-                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Section 125/Cafeteria Plans.</li>
-                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Travel Insurance.</li>
-                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Special Risk Coverage.</li>
-                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Long Term Care.</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Dental Plans (PPO & HMO)</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Vision</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Group Life/AD&D</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Chiropractor/Acupuncture</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Short and Long Term Disability</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Section 125/Cafeteria Plans</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Travel Insurance</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Special Risk Coverage</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Long Term Care</li>
                 </ul>
                 </div> <!-- /panels-text -->
               </div> <!-- /panels-item -->
@@ -151,10 +154,8 @@
       <div id="footer-columns-region" class="footer-columns region-30 block-30 bg-color-grayDark2 text-color-light">
         <div class="container">
           <div class="row">
-
             <div id="footer-first-column-region" class="footer-first-column col-xs-12 col-md-4 text-center">
               <div class="region">
-
                 <div id="footer-address-block" class="footer-address block">
                   <i class="icon ion-ios7-location-outline size-32 margin-bottom-20"></i>
                   <p>2050 Main Street Suite #520<br />Irvine, CA 92614</p>
@@ -165,7 +166,6 @@
 
             <div id="footer-second-column-region" class="footer-second-column col-xs-12 col-md-4 text-center">
               <div class="region">
-
                 <div id="footer-mail-block" class="footer-mail block">
                   <i class="icon ion-ios7-email-outline size-32 margin-bottom-20"></i>
                   <p><a href="mailto:info@vsbenefitspact.com">info@vsbenefitspact.com</a><br />
@@ -176,22 +176,16 @@
 
             <div id="footer-third-column-region" class="footer-third-column col-xs-12 col-md-4 text-center">
               <div class="region">
-
                 <div id="footer-phone-block" class="footer-phone block">
                   <i class="icon ion-ios7-telephone-outline size-32 margin-bottom-20"></i>
                   <p>+1 (351) 123-4567</p>
                 </div> <!-- /footer-phone-block -->
-
               </div> <!-- /region -->
             </div>  <!-- /footer-third-column-region -->
-
           </div> <!-- /row -->
         </div> <!-- /container -->
-
-
           </div> <!-- /row -->
         </div> <!-- /container -->
-      </footer>
     </div> <!-- /main-wrapper -->
 
     <!-- Back to top button -->
