Removed spacing from bottom

--- a/index.html
+++ b/index.html
@@ -151,7 +151,12 @@
 
       </div> <!-- /content-2-region -->
 
-      <div id="footer-columns-region" class="footer-columns region-30 block-30 bg-color-grayDark2 text-color-light">
+
+    </div> <!-- /row -->
+    </div> <!-- /container -->
+        <!-- /main-wrapper -->
+
+            <div id="footer-columns-region" class="footer-columns region-30 block-30 bg-color-grayDark2 text-color-light">
         <div class="container">
           <div class="row">
 
@@ -182,7 +187,7 @@
 
                 <div id="footer-phone-block" class="footer-phone block">
                   <i class="icon ion-ios7-telephone-outline size-32 margin-bottom-20"></i>
-                    <p>Erica: (949) 667-2108 <br>Bev: (949) 873-4099</p>
+                    <p>Bev: (949) 873-4099<br>Erica: (949) 667-2108</p>
                 </div> <!-- /footer-phone-block -->
 
               </div> <!-- /region -->
@@ -191,10 +196,6 @@
           </div> <!-- /row -->
         </div> <!-- /container -->
       </div> <!-- /footer-columns-region -->
-    </div> <!-- /row -->
-    </div> <!-- /container -->
-        <!-- /main-wrapper -->
-
     <!-- Back to top button -->
 
     <div id="back-to-top">
