--- a/page-about.html
+++ b/page-about.html
@@ -168,7 +168,7 @@
 
                 <div id="footer-phone-block" class="footer-phone block">
                   <i class="icon ion-ios7-telephone-outline size-32 margin-bottom-20"></i>
-                  <p>Erica: (949) 667-2108 <br>Bev: (949) 873-4099</p>
+                  <p>Bev: (949) 873-4099<br>Erica: (949) 667-2108</p>
                 </div> <!-- /footer-phone-block -->
 
               </div> <!-- /region -->
