--- a/page-services.html
+++ b/page-services.html
@@ -104,8 +104,8 @@
           </div> <!-- /container -->
         </div> <!-- /about-content-block -->
 
-      <div id="content-region" class="content region">
-        <div id="panels-4-block" class="panels-4 block">
+      <div id="content-region" class="content region" style="padding-top: 0px">
+        <div id="panels-4-block" class="panels-4 block" style="padding-top: 0px">
           <div class="container">
             <div class="row hidden-xs" style="margin-left:82.5px; margin-right:82.5px;">
               <div class="col-xs-12 col-sm-6 col-md-6 panels-item">
@@ -151,7 +151,9 @@
           </div> <!-- /container -->
         </div> <!-- /panels-4-block -->
 
-      <div id="footer-columns-region" class="footer-columns region-30 block-30 bg-color-grayDark2 text-color-light">
+    </div> <!-- /main-wrapper -->
+
+                <div id="footer-columns-region" class="footer-columns region-30 block-30 bg-color-grayDark2 text-color-light">
         <div class="container">
           <div class="row">
             <div id="footer-first-column-region" class="footer-first-column col-xs-12 col-md-4 text-center">
@@ -178,7 +180,7 @@
               <div class="region">
                 <div id="footer-phone-block" class="footer-phone block">
                   <i class="icon ion-ios7-telephone-outline size-32 margin-bottom-20"></i>
-                  <p>Erica: (949) 667-2108 <br>Bev: (949) 873-4099</p>
+                  <p>Bev: (949) 873-4099<br>Erica: (949) 667-2108</p>
                 </div> <!-- /footer-phone-block -->
               </div> <!-- /region -->
             </div>  <!-- /footer-third-column-region -->
@@ -186,7 +188,6 @@
         </div> <!-- /container -->
           </div> <!-- /row -->
         </div> <!-- /container -->
-    </div> <!-- /main-wrapper -->
 
     <!-- Back to top button -->
 
