Fixed Services Page (no white space)

--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
                 </div> <!-- /navbar-collapse -->
               </nav>
             </div> <!-- /menu-region -->
-
           </div> <!-- /row -->
         </div> <!-- container -->
       </header>
 
      <div id="highlighted-region" class="highlighted text-color-light">
-        <div id="highlighted-slider-2-block" class="highlighted-slider-2">                <figure>
-                  <img src="img/highlighted/highfivecropped.jpg" class="img-responsive img-full-width" alt="Milan" title="Milan">
-                  <figcaption class="overlay overlay-30 text-center">
+        <div id="highlighted-slider-2-block" class="highlighted-slider-2">
+          <figure>
+            <img src="img/highlighted/highfivecropped.jpg" class="img-responsive img-full-width" alt="Milan" title="Milan">
+              <figcaption class="overlay overlay-30 text-center">
                     <div class="highlighted-slider-2-content">
                       <h1 class="slider-title">VS Benefits Pact</h1>
                       <p class="slider-description">Our promise to you.</p>
@@ -103,9 +103,7 @@
                   <p>To us, you are more than a client, you are family.</p>
                 </div> <!-- /panels-text -->
               </div> <!-- /panels-item -->
-
             </div> <!-- /row -->
-
               <div class="row hidden-lg hidden-md hidden-sm">
               <div class="col-xs-12 col-md-6 panels-item margin">
                 <div class="panels-icon text-color-theme">
@@ -154,6 +152,7 @@
 
     </div> <!-- /row -->
     </div> <!-- /container -->
+
         <!-- /main-wrapper -->
 
             <div id="footer-columns-region" class="footer-columns region-30 block-30 bg-color-grayDark2 text-color-light">
@@ -167,7 +166,6 @@
                   <i class="icon ion-ios7-location-outline size-32 margin-bottom-20"></i>
                   <p>2050 Main Street Suite #520<br />Irvine, CA 92614</p>
                 </div> <!-- /footer-address-block -->
-
               </div> <!-- /region -->
             </div> <!-- /footer-first-column-region -->
 
@@ -178,13 +176,11 @@
                   <i class="icon ion-ios7-email-outline size-32 margin-bottom-20"></i>
                   <p><a href="mailto:info@vsbenefitspact.com">info@vsbenefitspact.com</a><br /></p>
                 </div> <!-- /footer-mail-block -->
-
               </div> <!-- /region -->
             </div>  <!-- /footer-second-column-region -->
 
             <div id="footer-third-column-region" class="footer-third-column col-xs-12 col-md-4 text-center">
               <div class="region">
-
                 <div id="footer-phone-block" class="footer-phone block">
                   <i class="icon ion-ios7-telephone-outline size-32 margin-bottom-20"></i>
                     <p>Bev: (949) 873-4099<br>Erica: (949) 667-2108</p>
@@ -195,7 +191,7 @@
 
           </div> <!-- /row -->
         </div> <!-- /container -->
-      </div> <!-- /footer-columns-region -->
+      </div> <!-- /footer-columns-region --
     <!-- Back to top button -->
 
     <div id="back-to-top">
