--- a/page-services.html
+++ b/page-services.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="HTML5, CSS3, Theme, ThemeForest, Flat, Responsive, Multipurpose, Modern" />
     <link type="text/plain" rel="author" href="humans.txt" />
 
-    <link href="vsbenefitlogo.png" rel="icon" type="image/png" />
+    <link href="favicon.png" rel="icon" type="image/png" />
 
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,700%7cBitter:400,700' rel='stylesheet' type='text/css'>
     <!-- Bootstrap 3.1.0 -->
@@ -33,7 +33,7 @@
         <div class="container">
           <div class="row">
             <div id="logo-region" class="logo col-md-2 text-center-sm">
-              <a href="index.html"><img src="vsbenefitlogo.png" alt="logo" class="img-responsive" style="margin-top: 10px; margin-bottom: 10px;" /></a>
+              <a href="index.html"><img src="vsbenefitlogo.png" alt="logo" class="img-responsive" style="margin-top: 10px; margin-bottom: 10px;"/></a>
             </div> <!-- /logo-region -->
 
             <div id="menu-region" class="col-md-9">
@@ -52,7 +52,7 @@
                     <li class="dropdown">
                       <a href="page-about.html" class="dropdown-toggle">About Us</a>
                     </li>
-                    <li class="dropdown active">
+                    <li class="dropdown">
                       <a href="page-services.html" class="dropdown-toggle">Products and Services</a>
                     </li>
                     <li><a href="contact.php">Contact Us</a></li>
@@ -60,7 +60,6 @@
                 </div> <!-- /navbar-collapse -->
               </nav>
             </div> <!-- /menu-region -->
-
           </div> <!-- /row -->
         </div> <!-- container -->
       </header>
@@ -72,48 +71,45 @@
               <div class="region">
                 <div id="page-title-block" class="page-title block">
                   <h1>Products and Services</h1>
-
                 </div> <!-- /page-title-block -->
               </div> <!-- /region -->
-            </div> <!-- /top-content-right-region -->
+            </div> <!-- /top-content-left-region -->
           </div> <!-- /row -->
         </div> <!-- /container -->
       </div> <!-- /top-content-region -->
 
-        <div id="content-region" class="content region">
+       <div id="highlighted-region" class="content region">
+        <div id="portfolio-single-block" class="portfolio-single block">
+         <div class="container">
+          <div class="row">
+           <div class="col-xs-12">
+            <img class="img-responsive" src="img/highlighted/openenrollment.jpg" class="img-responsive img-full-width"/>
+             </div> <!-- /col-xs-12 -->
+            </div> <!-- /row -->
+           </div> <!-- /container -->
+          </div> <!-- /portfolio-single-block -->
+        </div>  <!-- /highlighted -->
 
-        <div id="about-content-block" class="about-content block">
+      <div id="highlighted-region" class="content-region">
+        <div id="about-content block" class="about-content block">
+            <div class="vertical-center text-center">
+              <div class="container">
+                <h6>"It's not about the products or plans, it's about the people. Using a collaborative approach, VSBP coordinates an offering that fits you."</h6>
+              </div> <!-- /container -->
+            </div> <!-- /vertical-center -->
+        </div> <!-- /text-widget-1-block -->
+      </div> <!-- /highlighted-region -->
+
+      <div id="content-region" class="content region">
+        <div id="panels-4-block" class="panels-4 block">
           <div class="container">
             <div class="row">
-              <div class="col-xs-12 col-md-offset-2 col-md-8">
-                <img src="img/highlighted/openenrollment.jpg" class="img-responsive img-full-width" />
-              </div> <!-- /col-xs-12 -->
-            </div> <!-- /row -->
-          </div> <!-- /container -->
-        </div> <!-- /about-content-block -->
-
-        <div id="content-region" class="content region">
-
-        <div id="about-content-block" class="about-content block">
-          <div class="container">
-            <div class="row">
-              <div class="col-xs-12 col-md-offset-2 col-md-8">
-                <h5>"It's not about the products or plans, it's about the people. Using a collaborative approach, VSBP coordinates an offering that fits you."</h5>
-              </div> <!-- /col-xs-12 -->
-            </div> <!-- /row -->
-          </div> <!-- /container -->
-        </div> <!-- /about-content-block -->
-
-      <div id="content-region" class="content region" style="padding-top: 0px">
-        <div id="panels-4-block" class="panels-4 block" style="padding-top: 0px">
-          <div class="container">
-            <div class="row hidden-xs" style="margin-left:82.5px; margin-right:82.5px;">
               <div class="col-xs-12 col-sm-6 col-md-6 panels-item">
                 <div class="panels-icon text-color-theme">
-                    <i class="icon ion-medkit"></i>
-                </div> <!-- /panels-icon -->
-                <div class="panels-text">
-                  <h6>Medical Plans</h6>
+                  <i class="icon ion-medkit"></i>
+                    </div> <!-- /panels-icon -->
+                      <div class="panels-text">
+                    <h6>Medical Plans</h6>
                     <ul class="icon-list">
                   <li><i class="icon ion-checkmark-round text-color-theme"></i>Health maintenance organization (HMO) plans</li>
                   <li><i class="icon ion-checkmark-round text-color-theme"></i>Preferred provider organization (PPO) plans</li>
@@ -121,12 +117,12 @@
                   <li><i class="icon ion-checkmark-round text-color-theme"></i>Self-insured plans</li>
                   <li><i class="icon ion-checkmark-round text-color-theme"></i>International and expatiate plans</li>
                   <li><i class="icon ion-checkmark-round text-color-theme"></i>Individual plans (Including covered California Exchange)</li>
-                </ul>
+                    </ul>
                 </div> <!-- /panels-text -->
               </div> <!-- /panels-item -->
 
               <div class="clearfix visible-sm"></div>
-                <div class="row hidden-xs" style="margin-left:82.5px; margin-right:82.5px;">
+
               <div class="col-xs-12 col-sm-6 col-md-6 panels-item margin-top-sm-40">
                 <div class="panels-icon text-color-theme">
                   <i class="icon ion-steam"></i>
@@ -134,7 +130,7 @@
                 <div class="panels-text">
                   <h6>Core and Voluntary Products</h6>
                     <ul class="icon-list">
-                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Dental Plans (PPO & HMO)</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>Dental Plans (PPO and HMO)</li>
                   <li><i class="icon ion-checkmark-round text-color-theme"></i>Vision</li>
                   <li><i class="icon ion-checkmark-round text-color-theme"></i>Group Life/AD&D</li>
                   <li><i class="icon ion-checkmark-round text-color-theme"></i>Chiropractor/Acupuncture</li>
@@ -143,17 +139,19 @@
                   <li><i class="icon ion-checkmark-round text-color-theme"></i>Travel Insurance</li>
                   <li><i class="icon ion-checkmark-round text-color-theme"></i>Special Risk Coverage</li>
                   <li><i class="icon ion-checkmark-round text-color-theme"></i>Long Term Care</li>
-                </ul>
+                    </ul>
                 </div> <!-- /panels-text -->
               </div> <!-- /panels-item -->
+
+              <div class="clearfix visible-sm"></div>
 
             </div> <!-- /row -->
           </div> <!-- /container -->
         </div> <!-- /panels-4-block -->
-
+      </div> <!-- /content-region -->
     </div> <!-- /main-wrapper -->
 
-                <div id="footer-columns-region" class="footer-columns region-30 block-30 bg-color-grayDark2 text-color-light">
+       <div id="footer-columns-region" class="footer-columns region-30 block-30 bg-color-grayDark2 text-color-light">
         <div class="container">
           <div class="row">
             <div id="footer-first-column-region" class="footer-first-column col-xs-12 col-md-4 text-center">
@@ -162,7 +160,6 @@
                   <i class="icon ion-ios7-location-outline size-32 margin-bottom-20"></i>
                   <p>2050 Main Street Suite #520<br />Irvine, CA 92614</p>
                 </div> <!-- /footer-address-block -->
-
               </div> <!-- /region -->
             </div> <!-- /footer-first-column-region -->
 
@@ -170,9 +167,8 @@
               <div class="region">
                 <div id="footer-mail-block" class="footer-mail block">
                   <i class="icon ion-ios7-email-outline size-32 margin-bottom-20"></i>
-                  <p><a href="mailto:info@vsbenefitspact.com">info@vsbenefitspact.com</a><br />
+                  <p><a href="mailto:info@vsbenefitspact.com">info@vsbenefitspact.com</a></p>
                 </div> <!-- /footer-mail-block -->
-
               </div> <!-- /region -->
             </div>  <!-- /footer-second-column-region -->
 
@@ -186,11 +182,9 @@
             </div>  <!-- /footer-third-column-region -->
           </div> <!-- /row -->
         </div> <!-- /container -->
-          </div> <!-- /row -->
-        </div> <!-- /container -->
+      </div> <!-- /footer-columns-region -->
 
     <!-- Back to top button -->
-
     <div id="back-to-top">
       <i class="ion-ios7-arrow-up"></i>
     </div>
@@ -209,5 +203,7 @@
     <script src="js/venobox.min.js"></script>
     <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script src="js/app.js"></script>
+    <!-- Demo Switcher -->
+    <script src="js/demo-switcher.js"></script>
   </body>
 </html>
