--- a/page-services.html
+++ b/page-services.html
@@ -115,7 +115,7 @@
                   <li><i class="icon ion-checkmark-round text-color-theme"></i>Preferred provider organization (PPO) plans</li>
                   <li><i class="icon ion-checkmark-round text-color-theme"></i>Health savings account (HSA) plans</li>
                   <li><i class="icon ion-checkmark-round text-color-theme"></i>Self-insured plans</li>
-                  <li><i class="icon ion-checkmark-round text-color-theme"></i>International and expatiate plans</li>
+                  <li><i class="icon ion-checkmark-round text-color-theme"></i>International and expatriate plans</li>
                   <li><i class="icon ion-checkmark-round text-color-theme"></i>Individual plans (Including covered California Exchange)</li>
                     </ul>
                 </div> <!-- /panels-text -->
