Added "Our staff" code to include 3 photos and descriptions. Will resize photos.

--- a/page-about.html
+++ b/page-about.html
@@ -82,7 +82,6 @@
       </div> <!-- /top-content-region -->
 
       <div id="content-region" class="content region">
-
         <div id="about-content-block" class="about-content block">
           <div class="container">
             <div class="row">
@@ -92,15 +91,49 @@
                   extension of our clients - representing you, <br> not a product.</p>
                   <p>Partnering with larger general agencies allow us to give access to cutting edge technologies and programs at no additional cost to our clients.</p>
               </div> <!-- /col-xs-12 -->
-
               <div class="col-xs-12 col-md-6 margin-top-sm-30">
                 <img src="img/highlighted/everyonetable.jpg" class="img-responsive img-full-width" />
               </div> <!-- /col-xs-12 -->
-
             </div> <!-- /row -->
           </div> <!-- /container -->
         </div> <!-- /about-content-block -->
 
+    <div id="content-2-region" class="content-2 region">
+        <div id="team-block" class="team block">
+          <div class="container">
+            <h2 class="block-title">Our Team</h2>
+            <div class="row">
+              <div class="col-xs-12 col-md-4 team-item">
+                <div class="team-item-image">
+                  <img src="img/staff/DanPortrait.jpg" alt="member 1" title="member 1" class="img-responsive" />
+                </div> <!-- /team-item-image -->
+                <div class="team-item-name">
+                  <h6>Daniel C. Venegas</h6>
+                </div> <!-- /team-item-name -->
+                <p class="team-item-description">Principal Partner of VS Benefits Pact with 25 years experience in corporate benefits, including large and small group healthcare programs.</p>
+              </div> <!-- /team-item -->
+              <div class="col-xs-12 col-md-4 team-item">
+                <div class="team-item-image">
+                  <img src="img/staff/EricaPortrait.jpg" alt="member 2" title="member 2" class="img-responsive" />
+                </div> <!-- /team-item-image -->
+                <div class="team-item-name">
+                  <h6>Erica L. Sylvia</h6>
+                </div> <!-- /team-item-name -->
+                <p class="team-item-description">Principal Partner of VS Benefits Pact, focusing on client communications, coordinating, and relationships management. </p>
+              </div> <!-- /team-item -->
+              <div class="col-xs-12 col-md-4 team-item">
+                <div class="team-item-image">
+                  <img src="img/staff/BevPortrait.jpg" alt="member 3" title="member 3" class="img-responsive" />
+                </div> <!-- /team-item-image -->
+                <div class="team-item-name">
+                  <h6>Beverly J. Evans</h6>
+                </div> <!-- /team-item-name -->
+                <p class="team-item-description">20 years experience specializing in competitive Medical, Dental, Vision & Term Life with access to all carriers. Your constant support for presentation, implementation and administration of customized benefits packages.</p>
+              </div> <!-- /team-item -->
+            </div> <!-- /row -->
+          </div> <!-- /container -->
+        </div> <!-- /team-block -->
+      </div> <!-- /content-2-region -->
       <div id="content-3-region" class="content-3 region bg-color-grayLight1">
         <div id="partners-block" class="partners block">
           <div class="container">
@@ -108,13 +141,10 @@
               <div class="col-xs-12 col-sm-6 col-md-4 partner">
                 <img src="img/partners/WordAndBrown.png" alt="partner 1" class="img-responsive" />
                   </div> <!-- /partner -->
-
               <div class="col-xs-12 col-sm-6 col-md-4 margin-top-xs-50 partner">
                 <img src="img/partners/WarnerPacific.png" alt="partner 2" class="img-responsive" />
               </div> <!-- /partner -->
-
               <div class="clearfix visible-sm"></div> <!-- /clearfix -->
-
               <div class="col-xs-12 col-sm-6 col-md-4 margin-top-sm-50 partner">
                 <img src="img/partners/CalChoice.png" alt="partner 3" class="img-responsive" />
                     </div> <!-- /partner -->
@@ -124,9 +154,7 @@
               </div> <!-- /partner -->
             </div> <!-- /row -->
           </div> <!-- /container -->
-
         <!-- /main-wrapper -->
-
       <div id="footer-columns-region" class="footer-columns region-30 block-30 bg-color-grayDark2 text-color-light">
         <div class="container">
           <div class="row">
@@ -147,7 +175,6 @@
                 </div> <!-- /footer-mail-block -->
               </div> <!-- /region -->
             </div>  <!-- /footer-second-column-region -->
-
             <div id="footer-third-column-region" class="footer-third-column col-xs-12 col-md-4 text-center">
               <div class="region">
                 <div id="footer-phone-block" class="footer-phone block">
