Added CA License Information

--- a/page-about.html
+++ b/page-about.html
@@ -111,6 +111,7 @@
                   <h6>Daniel C. Venegas</h6>
                 </div> <!-- /team-item-name -->
                 <p class="team-item-description">Principal Partner of VS Benefits Pact with 25 years experience in corporate benefits, including large and small group healthcare programs.</p>
+                <p class="team-item-description"> <i>CA Insurance License: 0812390</i>  </p>
               </div> <!-- /team-item -->
               <div class="col-xs-12 col-md-4 team-item">
                 <div class="team-item-image">
@@ -120,6 +121,7 @@
                   <h6>Erica L. Sylvia</h6>
                 </div> <!-- /team-item-name -->
                 <p class="team-item-description">Principal Partner of VS Benefits Pact, focusing on client communications, coordinating, and relationships management. </p>
+                <p class="team-item-description"> <i>CA Insurance License: 0H99703</i> </p>
               </div> <!-- /team-item -->
               <div class="col-xs-12 col-md-4 team-item">
                 <div class="team-item-image">
@@ -129,6 +131,7 @@
                   <h6>Beverly J. Evans</h6>
                 </div> <!-- /team-item-name -->
                 <p class="team-item-description">20 years experience specializing in competitive Medical, Dental, Vision & Term Life with access to all carriers. Your constant support for presentation, implementation and administration of customized benefits packages.</p>
+                <p class="team-item-description"> <i>CA Insurance License: 0F47801</i> </p>
               </div> <!-- /team-item -->
             </div> <!-- /row -->
           </div> <!-- /container -->
